[package]
name = "chain-earth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "0.12.0"
gltf = { version = "1.0", default-features = false, features = ["KHR_lights_punctual", "KHR_texture_transform", "KHR_materials_unlit", "extras", "names", "utils"] }
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
obj = "0.10"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
cfg-if = "0.1"
# tobj = { version = "3.2", features = ["async"]}
tobj = "2.0"
rayon = "1.4" # NEW!
instant = "0.1"
async-std = "1"

tg-render-engine = { path = "crates/tg-render-engine" }

[workspace]
members = ["crates/*"]
