[package]
name = "chain-earth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "0.12.0"
winit = "0.26"
cgmath = "0.18"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
parking_lot = "0.11.0"
tg-render-engine = { path = "crates/tg-render-engine" }

[workspace]
members = ["crates/*"]
