[package]
name = "tg-render-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
pollster = "0.2"
image = "0.23"
log = "0.4"
tobj = "2.0"
wgpu = "0.12"
wgpu-subscriber = "0.1"
winit = "0.26"
parking_lot = "0.11.0"
hashbrown = { version = "0.11", features = ["serde"], optional = true }


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
naga = { version = "0.8", features = ["glsl-in", "spv-out", "wgsl-out"]}
rayon = "1.5"