[package]
name = "tg-render-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.9"
image = "0.23"
log = "0.4"
tobj = "2.0"
wgpu = "0.12"
winit = "0.26"
parking_lot = "0.11.0"
specs = {version="0.16.1",features=["parallel"]}
pollster = "0.2"
bytemuck = { version = "1.2.0", features = ["extern_crate_alloc"] }
nalgebra = "0.21.0"
nalgebra-glm = { version = "0.7", features = ["serde-serialize"] }
uuid = { version = "1.1.2", features = ["v4","fast-rng","macro-diagnostics"] }
raw-window-handle = "0.4.2"